feat(comment): 增强评论功能与结构优化
- 新增获取评论列表的接口，支持根据笔记 ID 查询评论
- 重构评论服务，优化评论创建与点赞逻辑
- 更新前端评论组件，支持嵌套回复与分页显示
- 删除冗余的评论输入与列表组件，整合为新的设计
- 修复部分代码中的格式与逻辑问题，提升可读性与性能